--- a/aphantasia_priming_analysis.qmd
+++ b/aphantasia_priming_analysis.qmd
@@ -7,9 +7,20 @@ editor_options:
 toc: true
 ---
 
-This analysis was conducted in R language through the RStudio Integrated Development Environment. Just down below is the setup code, including two essential steps: 1) installing the required packages for this data analysis, and 2) importing data into the dataframes used throughout. I left this (usually hidden) step there for reference in a view of transparency for the interested reader.
+:::{.callout-note collapse="true"}
+## Software and setup
+
+This analysis was conducted in R language through the [RStudio](https://posit.co/download/rstudio-desktop/) Integrated Development Environment. This analysis report was written with [Quarto](https://quarto.org/). Just down below is the setup code, including two essential steps: 
+
+1. Installing the required packages for this data analysis
+
+2. importing data into the dataframes used throughout. 
+
+I left this (usually hidden) step there for reference in a view of transparency for the interested reader.
+:::
 
 ```{r setup}
+#| output: false
 
 # --- Packages -----------------------------------------------------------------
 
@@ -24,6 +35,7 @@ library(librarian)
 # now putting packages on our library's shelves:
 shelf(
   readxl,         # Excel files management
+  openxlsx,       # Excel files management
   easystats,      # collection of data analysis packages
   tidymodels,     # collection of packages for a tidy modelling workflow
   bayesian,       # bayesian modelling with brms and tidymodels
@@ -72,6 +84,16 @@ df_questionnaires <-
     )
 ```
 
+::: {.callout-tip collapse="false"}
+## Datasets availability
+
+The folder containing this HTML file also has a "data" folder, wherein can be found the main Excel file from which the datasets analysed here are sourced, "aphantasia_priming_tidy_data.xlsx". It has several sheets:
+
+- `data_asso`/`_implicit`/`_explicit`/`_rotation`/`_questionnaires` are raw datasheets retrieved from old Excels and cleaned up
+
+- `data_processed_explicit`/`_implicit` are the datasets of the two main tasks after being processed here and in their final state before the inferential analyses in @sec-inferential.
+:::
+
 # Exploratory Data Analysis
 
 ## Questionnaire data and imagery
@@ -82,7 +104,7 @@ The four questionnaire variables - VVIQ, OSIQ-Object and Spatial, and SUIS - are
 
 ```{r correlation}
 
-# --- Bayesian Pearson correlation between questionnaire scores ---
+# --- Bayesian partial correlations between questionnaire scores ---
 cor_questionnaires <-
   df_questionnaires %>%
   select("vviq80", "suis60","osiq_o75", "osiq_s75") %>% 
@@ -292,19 +314,13 @@ rm(p_cor_spatial_vis, p_cor_spatial_vviq)
 p_spatial_correlations
 ```
 
-The consequence of this analysis is that from this point onwards, for the future models to be fitted, two options are available:
+The consequence of this analysis is that from this point onwards two options are available to model the data:
 
-- Binning the participants in two categories based on the VVIQ (cut-off at 32, Aphantasics/Phantasics).
+1. Using **Aphantasia (i.e. *****Group*****) as a categorical variable** by binning the participants in two categories based on the VVIQ (cut-off at 32, Aphantasics/Phantasics).
 
-- Using the visual imagery variable as a continuous predictor.
+2. Using **Visual Imagery as a continuous variable.**
 
-Although we could use the VVIQ both for categorizing and as a continuous variable, for the sake of consistency, we are going to use the VVIQ only as a classification variable for defining aphantasia, and the *Visual Imagery* component from the PCA as the continuous variable measuring visual imagery. Therefore two types of models are going to be fitted:
-
-1. Models using **Aphantasia as a categorical variable.**
-
-2. Models using **Visual Imagery as a continuous variable.**
-
-In both cases, we are going to account for the potential effect of spatial imagery by using the eponymous component computed earlier as a predictor in the models.
+In the main inferential analyses conducted down below, the first option has been selected for its ease of interpretation (and closeness to the results that would be obtained with the continuous variable anyway). Nevertheless, the two continuous variables of visual and spatial imagery defined here will be explored later in further data exploration.
 
 ```{r df_updates}
 #| echo: false
@@ -484,7 +500,7 @@ rm(p_errors_asso, p_errors_explicit, p_errors_implcit)
 p_tasks_error_perc
 ```
 
-We can see that the distributions are skewed yet very similar across groups and tasks: as such, we are going to use accuracy only to remove missed trials in the analyses of the RTs. Nevertheless, the main noticeable aspect of these plots are the obvious outliers in each of the tasks. This information is crucial as it could reflect a wrong understanding of the task, or random responses: in any case, participants that have high error rates would require a deletion of up to 47% of their trials, which could become a bias in the modelling of the overall data. As there appear to be a cut-off of the main distribution around 16% of errors in all tasks, this value will be chosen as threshold. **For each task separately, the results of participants with an error rate superior to 16% will be removed, prior to removing all the missed trials of the remaining participants for modelling RTs.**
+We can see that the distributions are skewed yet very similar across groups and tasks: as such, we are going to use accuracy only to remove missed trials in the analyses of the RTs. Nonetheless, the main noticeable aspect of these plots are the obvious outliers in each of the tasks. This information is crucial as it could reflect a wrong understanding of the task, or random responses: in any case, participants that have high error rates would require a deletion of up to 47% of their trials, which could become a bias in the modelling of the overall data. As there appear to be a cut-off of the main distribution around 16% of errors in all tasks, this value will be chosen as threshold. **For each task separately, the results of participants with an error rate superior to 16% will be removed, prior to removing all the missed trials of the remaining participants for modelling RTs.**
 
 ### Response times
 
@@ -634,12 +650,7 @@ df_rt %>% display
 
 For this more precise analysis of mean RTs, we are going to use an outlier detection method based on the Median Absolute Deviation (MAD). Common thresholds used for outlier detection with MADs are $median \ \pm \ 3 \cdot MAD$ (Hampel filter; see Enderlein, 1987). However, the low boundary of this interval would be aberrant in our case, as all the participants with fast RT means stay above the $median \ - \ 1.5 \cdot MAD$. As for the high threshold, the choice the $median \ + \ 3 \cdot MAD$ would set a highly conservative maximum (e.g. 1361ms for the explicit task) and bring the total number of removed trials over 13%. Therefore, after careful examination of the ranges, and in order to keep as many trials as possible, we chose to set the upper threshold at $median \ + \ 5 \cdot MAD$ (i.e. 1797ms for the explicit task, and 1386ms for the implicit task), resulting in an overall deletion of 7.9% of trials in the explicit task and 8.9% of trials in the implicit one in this whole data preprocessing. The resulting distributions of RTs for each participant are represented in @fig-rt_per_participant.
 
-```{r rt_per_participant}
-#| echo: false
-#| label: fig-rt_per_participant
-#| fig-cap: "Distribution of RTs in both tasks for each participant. Each colored line represents a single participant."
-#| fig-width: 11
-#| fig-height: 4
+```{r second_df_cleaning}
 
 # --- second tidying ---
 df_explicit_rt <-
@@ -673,6 +684,15 @@ df_implicit_rt <-
 
 # --- removing the last outlier ---
 df_explicit_rt <- df_explicit_rt %>% filter(subjectid != "dchimenton")
+```
+
+
+```{r rt_per_participant}
+#| echo: false
+#| label: fig-rt_per_participant
+#| fig-cap: "Distribution of RTs in both tasks for each participant. Each colored line represents a single participant."
+#| fig-width: 11
+#| fig-height: 4
 
 # --- RT distributions per participant ---
 p_rt_subject_explicit <- 
@@ -708,7 +728,7 @@ rm(p_rt_subject_explicit, p_rt_subject_implicit)
 p_tasks_rt_per_subject
 ```
 
-# Inferential Analyses
+# Inferential Analyses {#sec-inferential}
 
 ## Model description (Multilevel modelling)
 
@@ -739,7 +759,7 @@ $$
 RT_{ijk} = \alpha + \alpha_{subject[i]} + \beta_{1} \cdot \ Group_{i} \times (\beta_{2} + \beta_{2_{subject[i]}}) \cdot Congruence_{j} \times (\beta_{3} + \beta_{3_{subject[i]}}) \cdot Color_{k}
 \end{aligned}
 $$
-Where $\alpha$ is the global intercept, $\alpha_{subject[i]}$ is a random intercept by subject accounting for the inherent randomness tied to participants, and $\beta_{1/2/3}$ are the parameters representing the effect of each predictor. The "$\times$" signs represent the potential interactions along with fixed effects. Additionally, as one might expect the effect of the Congruence or Color conditions to have important variations between subjects (tied to cognitive processes and strategies), a slope $\beta_{j/k_{subject[i]}}$ by subject can be added to the Congruence and Color parameters to account for this variance.
+Where $\alpha$ is the global intercept, $\alpha_{subject[i]}$ is a random intercept by subject accounting for the inherent randomness tied to participants, and $\beta_{1/2/3}$ are the parameters representing the effect of each predictor. The "$\times$" signs represent the potential interactions along with fixed effects. Additionally, as one might expect the effect of the Congruence or Color conditions to have important variations between subjects (tied to cognitive processes and strategies), a slope $\beta_{2/3_{subject[i]}}$ by subject can be added to the Congruence or Color parameters to account for this variance.
 
 ### Potential models
 
@@ -749,7 +769,7 @@ RT data will be standardized before modelling, therefore the standardized coeffi
 
 $$
 \begin{aligned}
-RT_{ijk} = \alpha + \alpha_{subject[i]}
+RT_{i} = \alpha + \alpha_{subject[i]}
 \end{aligned}
 $$
 
@@ -998,7 +1018,7 @@ all_models_fitted <-
     )
 ```
 
-All of these models have been fitted for both tasks and their predictive performances compared using the AIC, AICc (Akaike corrected Information Criterion) and BIC (Bayesian Information Criterion). The maximal model did not converge, so only the five first models were evaluated. The results of these analyses are displayed in @tbl-model_perfs.
+All of these models have been fitted for both tasks and their predictive performances compared using the AIC, AICc (Akaike corrected Information Criterion) and BIC (Bayesian Information Criterion). The maximal model did not converge, so only the first five models were evaluated. The results of these analyses are displayed in @tbl-model_perfs.
 
 ```{r model_performances}
 #| echo: false
