--- a/todo.qmd
+++ b/todo.qmd
@@ -3,13 +3,20 @@ title: "To-do"
 ---
 
 
-Two overall analyses: Explicit and Implicit
+## Adjustments
 
-What threshold for the outlier RTs? --> RT distributions, vertical lines at 5/3/1%, 2.5 sd, etc.
+They plotted the effects by congruence and color side by side 
+-> do the same for explicit and implicit
+-> draw the plot first to create a masterpiece
 
-Analysis of the percentage of errors or no?
---> check the overall percentage of error
---> plot the distribution of the error percentage per participant to see the outliers with high error rates
+Add statistics to the figures with ggpubr.
+Look up how to represent interactions.
+Make the best looking figures ever.
 
+## Correlation analyses
+
+A coherent next step
 They evaluated the correlation: Questionnaires ~ Congruency effect
 --> Congruency effect = (For each color) Mean RT congruent - Mean RT incongruent
+
+Thus creating a new variable. Which continuous variables to study, and how?
